First draft of the introduction

--- a/cloudmde15.tex
+++ b/cloudmde15.tex
@@ -44,9 +44,30 @@
 
 \begin{document}
 
-\title{Model-Driven Cloud-Local Data \\Synchronisation for Mobile Applications}
+\title{Model-Driven Data Synchronisation \\ for Mobile Applications}
 \author{Sebastian Salazar Tapia\and Dimitrios S. Kolovos}
 \institute{Department of Computer Science, University of York, United Kingdom \\ \{dimitris.kolovos\}@york.ac.uk}
 \maketitle
+
+\begin{abstract}
+
+\end{abstract}
+
+\section{Introduction}
+A large number of mobile applications are data-driven in nature, and users expect that their data will be available anytime and anywhere, regardless of the availability and quality of network connections. In order to maintain application responsiveness, local storage is typically used to capture (new/modified) data while the application is offline. Then, when connectivity is available, data can be synchronized to central repositories in order to backup this data or share it with other users.
+
+Nevertheless, the implementation of data synchronization capabilities requires the definition of complex architectures and algorithms that are challenging to implement correctly, substantially extending the effort and time needed to produce even simple data centric applications. Usually, mobile application developers have to address these challenges in each project even though they have similar requirements.
+
+We present a model-driven approach for rapidly developing data centric Android applications with synchronisation capabilities, which addresses most of the data storage and syncrhonisation challenges that developers of this kind of applications need to deal with in a transparent manner.
+
+\section{Background}
+
+1-2 page summary of the literature review with a focus on section 2.2 of the MSc report (an introduction to MDE is not required for the target audience)
+
+\section{Model-Driven Cloud-Local Data Synchronisation}
+
+\section{Evaluation}
+
+\section{Conclusions and Further Work}
 
 \end{document}
